fix spacing for price

--- a/src/components/UI/Card.css
+++ b/src/components/UI/Card.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 .card {
-  border-radius: 5%;
+  border-radius: 10%;
   background-color: #15d64b;
   padding: 0 3rem 0 2rem;
 }
